[package]
name = "hololive-dd-bot"
version = "0.1.0"
authors = ["txya900619 <wayne900619@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egg-mode = "0.15"
tokio = { version = "0.2.24", features = ["full"] }
futures = "0.3"
