[package]
name = "hololive-dd-bot"
version = "0.1.0"
authors = ["txya900619 <wayne900619@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egg-mode = "0.15"
tokio = { version = "0.2.24", features = ["rt-threaded", "macros"] }
teloxide = "0.3"
teloxide-macros = "0.3"

log = "0.4.8"
pretty_env_logger = "0.4.0"
futures = "0.3"
